--- a/src/main/resources/templates/project/project_list.html
+++ b/src/main/resources/templates/project/project_list.html
@@ -114,8 +114,6 @@
     <a class="layui-btn layui-btn-warm layui-btn-sm" lay-event="remarks" >备注</a>
     {{#  } }}
 
-<!--        <a class="layui-btn layui-btn-disabled layui-btn-sm" lay-event="alreadyCollect" style="display: none">已收藏</a>-->
-
 </script>
 <script type="text/html" id="toolbar">
     <div class="layui-btn-container">
@@ -289,12 +287,14 @@
             }
         });
 
+
+        /*双击进入详情*/
         table.on('rowDouble(project_file_table)', function (obj) {
-            window.location = '/index/clickFile?fileName=' + 'xxxx';
+            window.location = '/index/clickFile?fileName=' + '文件6';
 
         });
         table.on('rowDouble(project_user_table)', function (obj) {
-            window.location = '/index/clickUser?username=' + '张三';
+            window.location = '/index/clickUser?username=' + userName ;
 
         });
         var remarks = function (fileid, username, oldValue) {
